--- a/.github/workflows/studio.yml
+++ b/.github/workflows/studio.yml
@@ -59,8 +59,8 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.pkgman.outputs.package_manager }} install
 
-      - name: Install @nuxthq/studio
-        run: ${{ steps.pkgman.outputs.package_manager }} add -D @nuxthq/studio
+      - name: Install @nuxthq/studio@next
+        run: ${{ steps.pkgman.outputs.package_manager }} add -D @nuxthq/studio@next
 
       - name: Create .nuxtrc
         run: echo 'modules[]=@nuxthq/studio' > .nuxtrc
